After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698619 - vlans trigger in_state_changed == FALSE warning
vlans trigger in_state_changed == FALSE warning
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-04-22 22:04 UTC by Dan Winship
Modified: 2013-05-20 19:39 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dan Winship 2013-04-22 22:04:34 UTC
the "in_state_changed" tracking in nm_device_state_changed() needs to be per-device; VLANs change state when their parent device does in some cases, and that currently triggers the warning.